docs(minerr): fix bad line wrap due to errand nowrap in CSS

--- a/docs/src/templates/css/docs.css
+++ b/docs/src/templates/css/docs.css
@@ -135,6 +135,10 @@
   white-space: nowrap;
 }
 
+.content pre code {
+  white-space: inherit;
+}
+
 .content h2,
 .content h3,
 .content h4,
